force-app/main/default/objects/kompalMay2__c/kompalMay2__c.object-meta.xml
<CustomObject>
    <label>kompalMay2</label>
    <nameField>
        <label>kompalMay2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>kompalMay2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>