force-app/main/default/objects/kompalMay2__c/fields/PC1__c.field-meta.xml
<CustomField>
    <fullName>PC1__c</fullName>
    <description>test picllist</description>
    <label>PC1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>test1</fullName>
            </value>
            <value>
                <fullName>test2</fullName>
            </value>
            <value>
                <fullName>test3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>