force-app/main/default/objects/kompalMay2__c/fields/pc2__c.field-meta.xml
<CustomField>
    <fullName>pc2__c</fullName>
    <label>pc2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>test11</fullName>
            </value>
            <value>
                <fullName>test22</fullName>
            </value>
            <value>
                <fullName>test33</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>