force-app/main/default/objects/kompalMay2__c/fields/pc3__c.field-meta.xml
<CustomField>
    <fullName>pc3__c</fullName>
    <label>pc3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>test</fullName>
                <default>true</default>
                <label>test</label>
            </value>
            <value>
                <fullName>test2</fullName>
            </value>
            <value>
                <fullName>test3</fullName>
            </value>
            <value>
                <fullName>test4</fullName>
            </value>
            <value>
                <fullName>test6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>