force-app/main/default/objects/kompalMay2__c/recordTypes/KPREc1.recordType-meta.xml
<RecordType>
    <fullName>KPREc1</fullName>
    <active>true</active>
    <description>test1123</description>
    <label>KPREc1</label>
</RecordType>