force-app/main/default/objects/kompalMay2__c/recordTypes/Rec2.recordType-meta.xml
<RecordType>
    <fullName>Rec2</fullName>
    <active>true</active>
    <label>Rec2</label>
</RecordType>