force-app/main/default/objects/kompalMay2__c/recordTypes/rec3.recordType-meta.xml
<RecordType>
    <fullName>rec3</fullName>
    <active>true</active>
    <label>rec3</label>
</RecordType>