force-app/main/default/objects/kompalMay2__c/validationRules/KompalR1.validationRule-meta.xml
<ValidationRule>
    <fullName>KompalR1</fullName>
    <active>true</active>
    <description>test vr</description>
    <errorConditionFormula>BEGINS( CreatedBy.FirstName ,&apos;kompal&apos;)</errorConditionFormula>
    <errorMessage>doesnt begin with kompal</errorMessage>
</ValidationRule>